# ai-thailand-hackathon-2025

./: .env.example  .env.template  .gitignore  .gitlab-ci-env.example  .gitlab-ci.yml  .gitlab.ci.example  .license-header.txt  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AI Hackathon Thailand 2025.postman_collection.json  AI4Thai_Vision_Service.postman_collection.json  API_GATEWAY_RABBITMQ_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  DEMO_DEPLOYMENT.md  DEPLOYMENT.md  FRONTEND_STATUS.md  H100_OPTIMIZATION.md  HACKATHON_DEPLOYMENT.md  HACKATHON_EXECUTION_PLAN.md  HACKATHON_MVP.md  LICENSE  MVP_REQUIREMENTS.md  Makefile  PRODUCT_SPEC.md  PROJECT_STRUCTURE.md  README.md  build-h100-optimized.sh  deploy-hackathon.sh  docker-compose.frontend.yml  docker-compose.yml  docker-compose.yml.example  dylint.toml  frontend-docker.sh  start-dev.sh  stop-dev.sh  test-hackathon-api.sh
.github/workflows/: ci.yml
ai-services/: AI4Thai_Queue_Worker.postman_collection.json  AI4Thai_Vision_Service.postman_collection.json  API_Testing_Guide.md  CI_DEPLOYMENT_GUIDE.md  Makefile  README.md  TECHNICAL_SHOWCASE.md  TESTING_README.md  __init__.py  lint-all.sh  optimize-images.sh  pyproject.toml  setup-dev.sh  test-all.sh  test_basic.py  validate-docker.sh
ai-services/deployment/: .env.example  .env.h100  docker-compose.ci.yml  docker-compose.yml  generate-compose.sh  test-paths.sh  validate-deployment.sh
ai-services/llm-service/: app.py  requirements.txt
ai-services/queue-worker/: Dockerfile  Makefile  app.py  enhanced_queue.py  pyproject.toml  requirements.txt  tasks.py  test_unit.py
ai-services/shared/: data_manager.py  error_handling.py  performance_monitor.py  test_unit.py
ai-services/tools/: README.md  __init__.py  generate-configs.py
ai-services/tools/shared-config/: Dockerfile.python.template  Makefile.template  api_gateway_response.py.template  pyproject.toml.template  services.json
ai-services/vision-service/: Dockerfile  Makefile  README.md  app.py  data_integration.py  memory_manager.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_unit.py  test_vision_service.py
ai-services/vision-service/services/: __init__.py  disease_detection.py  pest_detection.py
api-gateway/: Cargo.toml  Dockerfile
api-gateway/config/: default.toml  development.toml
api-gateway/src/: lib.rs  main.rs
api-gateway/src/config/: database.rs  external_apis.rs  mod.rs  redis.rs  services.rs
api-gateway/src/handlers/: chat.rs  health.rs  mod.rs  vision.rs
api-gateway/src/middleware/: cors.rs
api-gateway/src/services/: ai4thai_client.rs  file_storage.rs  llm_client.rs  mod.rs  rabbitmq.rs  registry.rs  vision_client.rs
api-gateway/src/utils/: errors.rs  mod.rs  validation.rs
backend/: Cargo.toml
backend/queue-worker/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  test_api.py
backend/vision-service/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md  README.md
docs/api/: README.md  gateway.md  llm-service.md  vision-service.md
docs/architecture/: README.md  ai-service-deployment.md  data-flow.md  diagrams-index.md  microservices.md  project-structure.md  swimlane-diagrams.md  system-design.md  uml-class-diagram.md  uml-sequence-diagrams.md
docs/deployment/: README.md  demo-deployment.md  separate-ai-services.md
docs/design/: DESIGN_SPEC_2025.md  FRONTEND_UPDATE_PLAN.md  README.md
docs/development/: README.md
docs/frontend/: README.md  component-architecture.md  design-system.md  pwa-implementation.md  testing-strategy.md
frontend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README-Docker.md  REVIEW_SUMMARY.md  TESTING.md  TESTING_STRATEGY.md  Trunk.toml  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf
frontend/src/: app.rs  lib.rs  simple_app.rs  types.rs
frontend/src/components/: chat.rs  diagnosis.rs  header.rs  image.rs  image_analysis.rs  image_test.rs  message.rs  mod.rs  welcome.rs
frontend/src/components/camera/: camera_capture.rs  mod.rs
frontend/src/components/chat/: chat_window.rs  mod.rs
frontend/src/components/layout/: bento_grid.rs  mod.rs
frontend/src/components/ui/: gradient_button.rs  loading.rs  mod.rs  status_card.rs
frontend/src/i18n/: mod.rs
frontend/src/pages/: home.rs  mod.rs
frontend/src/services/: api.rs
frontend/src/store/: mod.rs
frontend/src/styles/: bundle.rs  colors.rs  mod.rs  spacing.rs  typography.rs
frontend/src/utils/: accessibility.rs  design_tokens.rs  image.rs  mod.rs  performance.rs  responsive.rs  testing.rs  validation.rs
frontend/static/: manifest.json  styles.css  sw.js
frontend/styles/: main.scss
frontend/tests/: design_system_tests.rs
queue-worker/: Cargo.toml
scripts/: demo-start.sh  deploy-ai-services.sh  dev-frontend-docker.sh  dev-start.sh  dev-stop.sh  pre-commit-rust.sh  setup-dev.sh  setup-precommit.sh  test-all.sh  test-frontend.sh
shared/: Cargo.toml
shared/src/: api_contracts.rs  lib.rs
tests/: README.md
tests/integration/: api_contract_tests.rs
tests/unit/: rust_test_config.rs
