[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# API Gateway specific
multipart = "0.18"
tower-timeout = { workspace = true }
url = "2.4"
rand = "0.8"

# Local dependencies
shared = { path = "../shared" }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.0"