[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# API Gateway specific
multipart = "0.18"
tower-timeout = { workspace = true }
url = "2.4"
rand = "0.8"

# RabbitMQ integration
lapin = "3.3"
futures = "0.3"

# File handling and image processing
tempfile = "3.8"
image = "0.25"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Local dependencies
shared = { path = "../shared" }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.0"
