[package]
name = "ai-vision-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
chrono = { workspace = true }

# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Navigator",
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "SubmitEvent",
    "Storage",
    "Location",
] }

# Network and utilities
gloo = { version = "0.10", features = ["net", "storage", "timers", "events"] }
gloo-net = { version = "0.5", features = ["websocket"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

# Local dependencies
shared = { path = "../shared" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
tokio-test = "0.4"
