[package]
name = "ai-vision-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "Event",
    "MouseEvent",
] }

# Network and utilities
gloo-net = { version = "0.5", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
