[package]
name = "ai-vision-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

# Gloo utilities for WASM
gloo-net = "0.4"
gloo-utils = "0.2"
gloo-file = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Event",
    "MouseEvent",
    # Enhanced file handling features
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "DataTransfer",
    "DragEvent",
    "FormData",
    # Request/Response handling
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    # Camera and media access
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    # Additional DOM features
    "HtmlElement",
    "EventTarget",
    "Url",
    "UrlSearchParams",
]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for WASM
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# Internationalization
fluent = "0.16"

# UUID for generating IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Timers for polling
gloo-timers = "0.3"
