[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4thai-vision-service"
version = "1.0.0"
description = "AI4Thai Crop Guardian - Vision Service for agricultural pest detection and disease identification"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "../../LICENSE"}
authors = [
    {name = "AI Thailand Hackathon 2025 - Team KPR"},
]
keywords = ["agriculture", "computer-vision", "pest-detection", "disease-detection", "ai", "thailand"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    # Web Framework (minimal versions)
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",

    # Machine Learning - Optimized for H100 16GB VRAM (Python 3.11 compatible)
    "torch==2.2.2",
    "torchvision==0.17.2",
    "ultralytics==8.1.47",
    "transformers==4.39.3",
    "accelerate==0.29.3",
    "bitsandbytes==0.43.1",

    # Image Processing (minimal)
    "Pillow==10.1.0",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.24.4",

    # HTTP and API (minimal)
    "httpx==0.25.2",
    "aiofiles==23.2.1",

    # Configuration (minimal)
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",

    # Logging (minimal)
    "structlog==23.2.0",

    # Utilities (essential only)
    "psutil==5.9.6",

    # Production server
    "gunicorn==21.2.0",

    # GPU and optimization libraries (H100 optimized) - compatible version
    "nvidia-ml-py3==7.352.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx[test]>=0.25.0",
]

lint = [
    "ruff>=0.3.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx[test]>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ai-thailand-hackathon-2025/team10"
Repository = "https://gitlab.nectec.or.th/hackathon/ai-thailand-2025/team10"
Issues = "https://gitlab.nectec.or.th/hackathon/ai-thailand-2025/team10/-/issues"

[project.scripts]
vision-service = "app:main"

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "T20",    # flake8-print
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that may be too strict for this project
ignore = [
    "E501",   # Line too long (let ruff format handle it)
    "B008",   # Do not perform function calls in argument defaults
    "T201",   # print found (allow prints in ML code for debugging)
    "B904",   # Within an except clause, raise exceptions with raise ... from err
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"test_*.py" = ["PLR2004", "S101", "TID252"]
"**/tests/**" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["services", "memory_manager"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "build/*",
    "dist/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
